<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Not Always 42</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <!-- Savegame -->
    <string name="savegame_error_loading">Error loading savegame</string>
    <string name="savegame_saved">Savegame saved</string>
    <string name="savegame_nosave_game_finished">You can\'t save a finished game</string>

    <!-- Menu Fragment -->
    <string name="menu_singleplayer">Singleplayer</string>
    <string name="menu_load_savegame">Load Savegame</string>
    <string name="menu_multiplayer">Multiplayer</string>
    <string name="menu_quests">Quests</string>
    <string name="menu_achievement">Achievements</string>
    <string name="menu_leaderboard">Leaderboards</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_need_signin">Please sign in first</string>
    <string name="menu_progress">Sign in...</string>
    <string name="menu_singleplayer_alert_title">Continue without Google+ sign in?</string>
    <string name="menu_singleplayer_alert">You have to sign in for achievements, leaderboard and savegames</string>
    <string name="menu_singleplayer_without_signin_ok">Continue</string>
    <string name="menu_singleplayer_without_signin_cancel">Cancel</string>
    <string name="menu_quest_completed">You completed the quest %1$s</string>
    <string name="menu_quest_reward">Your reward: %1$s</string>
    <string name="menu_load_savegame_progress">Loading savegame...</string>

    <!-- Singleplayer Fragment -->
    <string name="singleplayer_savegame_text">Current round: %1$d - Rounds won: %2$d</string>

    <!-- Multiplayer Fragment -->
    <string name="multiplayer_match_automatching">Auto-matching</string>
    <string name="multiplayer_match_complete">Complete</string>
    <string name="multiplayer_match_expired">Expired</string>
    <string name="multiplayer_match_canceled">Canceled</string>
    <string name="multiplayer_winner">Winner: %1$s</string>
    <string name="multiplayer_end_game">End game</string>

    <!-- Game -->
    <string name="singleplayer_round">Round %1$d</string>
    <string name="singleplayer_invalid_number">Invalid number</string>
    <string name="singleplayer_correct_guess">You\'ve guessed correctly!</string>
    <string name="singleplayer_wrong_guess">You\'ve guessed wrong!</string>

    <!-- Layout Scoreboard -->
    <string name="scoreboard_rounds_1">1</string>
    <string name="scoreboard_rounds_2">2</string>
    <string name="scoreboard_rounds_3">3</string>
    <string name="scoreboard_rounds_4">4</string>
    <string name="scoreboard_rounds_5">5</string>

    <!-- Layout Guess -->
    <string name="guess_hint">Your guess (number from 1 to 5)</string>
    <string name="guess_button_text">Guess</string>

    <!-- Layout Game Finished -->
    <string name="game_finished_won">You won the game</string>
    <string name="game_finished_lost">You lost the game</string>
    <string name="game_finished_back">End game</string>
</resources>
