<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="@dimen/default_margin"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/round_indicator_1"
        android:layout_width="@dimen/round_indicator_size"
        android:layout_height="@dimen/round_indicator_size"
        android:layout_marginStart="@dimen/round_indicator_margin"
        android:layout_marginLeft="@dimen/round_indicator_margin"
        android:layout_marginEnd="@dimen/round_indicator_margin"
        android:layout_marginRight="@dimen/round_indicator_margin"
        android:background="@color/round_indicator_default"
        android:gravity="center"
        android:text="@string/scoreboard_rounds_1"
        android:textColor="@color/round_indicator_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/round_indicator_2"
        android:layout_width="@dimen/round_indicator_size"
        android:layout_height="@dimen/round_indicator_size"
        android:layout_marginStart="@dimen/round_indicator_margin"
        android:layout_marginLeft="@dimen/round_indicator_margin"
        android:layout_marginEnd="@dimen/round_indicator_margin"
        android:layout_marginRight="@dimen/round_indicator_margin"
        android:background="@color/round_indicator_default"
        android:gravity="center"
        android:text="@string/scoreboard_rounds_2"
        android:textColor="@color/round_indicator_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/round_indicator_3"
        android:layout_width="@dimen/round_indicator_size"
        android:layout_height="@dimen/round_indicator_size"
        android:layout_marginStart="@dimen/round_indicator_margin"
        android:layout_marginLeft="@dimen/round_indicator_margin"
        android:layout_marginEnd="@dimen/round_indicator_margin"
        android:layout_marginRight="@dimen/round_indicator_margin"
        android:background="@color/round_indicator_default"
        android:gravity="center"
        android:text="@string/scoreboard_rounds_3"
        android:textColor="@color/round_indicator_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/round_indicator_4"
        android:layout_width="@dimen/round_indicator_size"
        android:layout_height="@dimen/round_indicator_size"
        android:layout_marginStart="@dimen/round_indicator_margin"
        android:layout_marginLeft="@dimen/round_indicator_margin"
        android:layout_marginEnd="@dimen/round_indicator_margin"
        android:layout_marginRight="@dimen/round_indicator_margin"
        android:background="@color/round_indicator_default"
        android:gravity="center"
        android:text="@string/scoreboard_rounds_4"
        android:textColor="@color/round_indicator_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/round_indicator_5"
        android:layout_width="@dimen/round_indicator_size"
        android:layout_height="@dimen/round_indicator_size"
        android:layout_marginStart="@dimen/round_indicator_margin"
        android:layout_marginLeft="@dimen/round_indicator_margin"
        android:layout_marginEnd="@dimen/round_indicator_margin"
        android:layout_marginRight="@dimen/round_indicator_margin"
        android:background="@color/round_indicator_default"
        android:gravity="center"
        android:text="@string/scoreboard_rounds_5"
        android:textColor="@color/round_indicator_text"
        android:textSize="24sp"
        android:textStyle="bold"/>
</LinearLayout>